# SampleReturn

./: .gitignore  .gitmodules  README.md
ros_workspace/src/beacon_finder/: CMakeLists.txt  package.xml  setup.py
ros_workspace/src/beacon_finder/launch/: april_beacon_finder.launch  beacon_april_test.launch  beacon_finder.launch  beacon_finder_test.launch
ros_workspace/src/beacon_finder/msg/: AprilTagDetection.msg  AprilTagDetectionArray.msg
ros_workspace/src/beacon_finder/nodes/: beacon_finder.py
ros_workspace/src/beacon_finder/src/: beacon_april_node.cpp
ros_workspace/src/canopen/: CMakeLists.txt  package.xml
ros_workspace/src/canopen/include/: CANOpen.h  CopleyServo.h  NMT.h  PDO.h  SDO.h
ros_workspace/src/canopen/src/: Bus.cpp  CMakeLists.txt  CopleyServo.cpp  DS301.cpp  Interface.cpp  KvaserInterface.cpp  NMT.cpp  PDO.cpp  SYNC.cpp  Transfer.cpp
ros_workspace/src/canopen/test/: CMakeLists.txt  CopleyTest.cpp  TransferTest.cpp  readbus.cpp
ros_workspace/src/detection_filter/: CMakeLists.txt  package.xml  setup.py
ros_workspace/src/detection_filter/cfg/: kalman_filter_params.cfg  manipulator_kalman_filter_params.cfg
ros_workspace/src/detection_filter/nodes/: detection_filter_node.py  dslr_kalman_filter_node.cpp  kalman_filter_node.cpp  manipulator_kalman_filter_node.cpp
ros_workspace/src/detection_filter/src/: probability.cpp
ros_workspace/src/executive/: CMakeLists.txt  package.xml  setup.py
ros_workspace/src/executive/config/: executive.yaml  manipulator_pattern.yaml  octagon.yaml  odometry_calibrate.yaml  park.yaml  recover_test.yaml  recovery_square.yaml  recovery_standard.yaml  recovery_test.yaml  test.yaml
ros_workspace/src/executive/launch/: executive.launch  executive_test.launch
ros_workspace/src/executive/nodes/: costmap_checker_node.py  executive_master_node.py  level_one_node.py  level_two_node.py  master_executive.py  pursue_sample_node.py
ros_workspace/src/executive/src/: executive_master.py
ros_workspace/src/global_path/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  path.py  utils.py
ros_workspace/src/global_path/nodes/: global_path.py  global_path_node.py  mock_fence.py  path.py
ros_workspace/src/global_path/srv/: GlobalPath.srv  MockFence.srv
ros_workspace/src/image_rot90/: CMakeLists.txt  package.xml
ros_workspace/src/image_rot90/cfg/: DynamicParameters.cfg
ros_workspace/src/linemod_detector/: CMakeLists.txt  package.xml
ros_workspace/src/linemod_detector/cfg/: Linemod.cfg  PointCloudProjector.cfg
ros_workspace/src/linemod_detector/config/: all_samples.yaml  easy_intermediate_test.yaml  manipulator_samples.yaml  manipulator_samples_2d.yaml  metal_lines.yaml  metal_samples.yaml  metal_square.yaml  metal_star.yaml  metal_tree.yaml  orange_pipe.yaml  pre_cached.yaml  pre_cached_3.yaml  puck_pipe_test.yaml  red_puck.yaml  red_puck_2d.yaml  red_puck_2d_test.yaml  test.yaml  wood_cube_2.yaml
ros_workspace/src/linemod_detector/include/: new_modalities.hpp
ros_workspace/src/linemod_detector/launch/: kinect_linemod_2d.launch  linemod_train.launch  manipulator_linemod.launch  manipulator_linemod_2d.launch
ros_workspace/src/linemod_detector/msg/: NamedPoint.msg
ros_workspace/src/linemod_detector/scripts/: Makefile  bilateral_test.cpp  save_disp.py
ros_workspace/src/linemod_detector/src/: linemod_detector.cpp  linemod_detector_2d.cpp  linemod_trainer.cpp  mask_utils.cpp  new_modalities.cpp  pointcloud_projector.cpp  stereo_linemod_trainer.cpp
ros_workspace/src/manipulator/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
ros_workspace/src/manipulator/action/: Manipulator.action  ManipulatorGrab.action
ros_workspace/src/manipulator/config/: dynamixel_test.yaml  manipulator.yaml
ros_workspace/src/manipulator/launch/: dynamixel_test.launch  manipulator.launch  manipulator_test.launch
ros_workspace/src/manipulator/nodes/: dynamixel_test_node.py  manipulator_node.py  manipulator_test_node.py
ros_workspace/src/manipulator/src/: manipulator_node.py
ros_workspace/src/manipulator/srv/: GoToPosition.srv  TorqueHold.srv  TorqueStandoff.srv
ros_workspace/src/platform_motion/: CMakeLists.txt  joystick.launch  mainpage.dox  package.xml  plugin_description.xml  setup.py
ros_workspace/src/platform_motion/cfg/: PlatformParameters.cfg
ros_workspace/src/platform_motion/launch/: test_lls_odo.launch
ros_workspace/src/platform_motion/msg/: Centers.msg  ServoStatus.msg
ros_workspace/src/platform_motion/nodes/: carousel_indexer.py  manual_control_node.py  sinusoid_test.py  viewcenters.py
ros_workspace/src/platform_motion/src/: EKF_odometry.cpp  EKF_odometry_node.cpp  LLS_odometry.cpp  acceleration_limit.cpp  least_squares_odometry_lmmin.cpp  least_squares_odometry_node.cpp  lmmin.c  motion.cpp  motion_node.cpp  nonlinearanalyticconditionalgaussianthreewheel.cpp  odometry.cpp  odometry_bfl.cpp  odometry_node.cpp  odometrymotionpdf.cpp  odometrywithcurvature.cpp  path_display.cpp  path_visual.cpp  scarytestpath.cpp  teleop.cpp  test_EKF_odometry.cpp  (+5 more)
ros_workspace/src/robot_setup_tf/: .gitignore  CMakeLists.txt  package.xml
ros_workspace/src/sample_detection/: CMakeLists.txt  package.xml
ros_workspace/src/samplereturn/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
ros_workspace/src/sbpl_lattice_planner_msgs/: CMakeLists.txt  package.xml
ros_workspace/src/sync_images/: CMakeLists.txt  package.xml
ros_workspace/src/the_smooth_planner/: CMakeLists.txt  bgp_plugin.xml  mainpage.dox  package.xml
ros_workspace/src/visual_servo/: CMakeLists.txt  debug_pid  debug_tunable_constants  package.xml  setup.py
src/CANOpen/: CMakeLists.txt
src/CANOpen/include/: Bus.h  Callbacks.h  CopleyServo.h  DS301.h  EMCY.h  Interface.h  KvaserInterface.h  Message.h  PDO.h  SDO.h  SYNC.h  Transfer.h  invertmap.h
src/CANOpen/src/: Bus.cpp  CMakeLists.txt  CopleyServo.cpp  DS301.cpp  DS401.cpp  EMCY.cpp  KvaserInterface.cpp  Message.cpp  NMT.cpp  PDO.cpp  SDO.cpp
src/CANOpen/test/: CMakeLists.txt  CopleyTest.cpp  TransferTest.cpp  invmaptest.cpp
src/fisheye_calib/: CMakeLists.txt  calibration.cpp
(+645 files in other folders)
