<?xml version="1.0"?>
<package>
  <name>beacon_finder</name>
  <version>0.0.1</version>
  <description>Locates the beacon in an image and outputs a vector in the camera's frame from the robot's location to the beacon</description>
  <license>BSD</license>
  <author email="brandon.m.booth@gmail.com">Brandon Booth</author>
  <maintainer email="contradict@gmail.com">contradict</maintainer>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv</build_depend>
  <build_depend>cv2</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv</run_depend>
  <run_depend>cv2</run_depend>
  <run_depend>numpy</run_depend>

</package>
