<?xml version="1.0"?>
<package>
  <name>detection_filter</name>
  <version>0.0.0</version>
  <description>filter detections based on multiple observations</description>

  <maintainer email="contradict@gmail.com">contradict</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/detection_filter</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>samplereturn_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>saliency_detector</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>samplereturn_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>saliency_detector</run_depend>


  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>linemod_detector</run_depend>

</package>
