<package>
    <name>image_rot90</name>
    <version>0.1.0</version>
    <description >

        Rotate or flip an image.

    </description>
    <author>contradict</author>
    <license>BSD</license>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <url>https://github.com/contradict/SampleReturn</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>opencv2</build_depend>

    <run_depend>roslib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>opencv2</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_image_rot90.xml" />
    </export>

</package>


