<package>
    <name>manipulator</name>
    <version>0.0.0</version>
    <description>
        Sample Return manipulator control state machine
    </description>
    <author>fred zyda</author>
    <license>BSD</license>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <url>https://github.com/contradict/SampleReturn</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>platform_motion</build_depend>
    <build_depend>dynamixel_controllers</build_depend>
    <build_depend>dynamixel_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>smach</build_depend>
    <build_depend>smach_ros</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>platform_motion</run_depend>
    <run_depend>dynamixel_controllers</run_depend>
    <run_depend>dynamixel_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>smach</run_depend>
    <run_depend>smach_ros</run_depend>
    <run_depend>std_msgs</run_depend>

</package>


